PROJECT(videoInput)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

ADD_LIBRARY(videoInput videoInput.cpp)

IF(MSYS OR MINGW)
	INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/Include/BaseClasses)
	INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/Include/DShow)

	SET_TARGET_PROPERTIES(videoInput
						  PROPERTIES 
						  COMPILE_FLAGS "-include ${CMAKE_SOURCE_DIR}/unvc.h -Wno-multichar")
ENDIF()